--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   provider: ^4.3.2+4
   image_picker: ^0.6.7+15
   path_provider: ^1.6.24
+  image_gallery_saver: ^1.6.7
+  permission_handler: ^5.1.0+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
